--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body {
     font-family: Roboto, sans-serif;
-    background-color: #2c3e50;
+    background-color: #1D2521;
     text-align: center;
     margin: 0;
 }
 
 header {
-    background-color: #3498db;
-    color: #ECF0f1;
+    background-color: #D4C29E;
+    color: #8F6E51;
     padding: 20px;
 }
 
@@ -23,7 +23,7 @@ header {
     max-width: 400px;
     margin: 10px auto;
     padding: 15px;
-    background-color: #ECF0f1;
+    background-color: #637A78;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
@@ -35,8 +35,8 @@ header {
 }
 
 footer {
-    background-color: #3498db;
-    color: #ECF0f1;
+    background-color: #D4C29E;
+    color: #8F6E51;
     padding: 10px;
 }
 
